Committing the fix for bug #91936. This is fairly intrusive, so some more testing is required before this change is backported into the 3.3.x branch. I need especially people with older systems and non-Linux systems to test it.

This patch also adds another workaround for bug #86271, in the sense
that res_init is always called in glibc-based systems once a thread is
started. But note that the proper fix is to upgrade glibc, since other
non-KDE programs are affected by the same bug (notably, Mozilla).

Also, please notify me of any other systems that use a thread-specific
resolver context (the `res' variable), like glibc.
CCBUG: 86271
BUG: 91936

svn path=/trunk/kdelibs/; revision=358239